# Shogun

./: .env.example  .gitignore  Dockerfile  Dockerfile.slim  Gensui-Docker-Install.bat  Gensui-Docker-Install.sh  Gensui-Install.bat  Gensui-Install.command  LICENSE.md  README.md  Shogun-AFM-Docker-Install.bat  Shogun-AFM-Docker-Install.sh  Shogun-Install.bat  Shogun-Install.command  Shogun-Repair-Update.bat  docker-compose.yml  install.bat  install.sh  pyproject.toml  start.bat  start.sh  version.json
Build papers/: Gensui - BuildPaper.md  Office App - Build Paper.md  Open source Office App - Build Paper.md  Teams Comm - Build Paper.md
Knowledge Item/: immutable_audit_log.md  model_provider_setup.md  qdrant_setup.md
bridge/teams/: README.md  package-lock.json  package.json
docker/: docker-compose.image.yml  docker-compose.slim.yml  docker-compose.yml  entrypoint.sh  slim-entrypoint.sh
docs/: RUNBOOK.md
docs/integrations/: microsoft-teams-adapter.md  microsoft-teams-manifest.md  microsoft-teams-security-model.md  microsoft-teams-setup-guide.md  microsoft-teams-troubleshooting.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
gensui/: .dockerignore  .env.example  Dockerfile  __init__.py  __main__.py  app.py  config.py  docker-compose.yml  install.bat  install.sh  nginx.conf  pyproject.toml  start.bat  start.sh
gensui/api/: __init__.py  alerts.py  audit.py  auth.py  commands.py  dashboard.py  deps.py  enrollment.py  fleet_audit.py  harakiri.py  heartbeat.py  identity.py  members.py  monitoring.py  policy.py  postures.py  telemetry.py
gensui/db/: __init__.py  base.py  engine.py
gensui/db/models/: __init__.py  admin_user.py  alert.py  audit_log.py  command.py  enrollment_token.py  global_posture.py  group_membership.py  harakiri_event.py  member_group.py  policy_decision.py  security_posture.py  service_account.py  shogun_member.py  sso_provider.py  telemetry_event.py
gensui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
gensui/frontend/src/: App.tsx  index.css
gensui/frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
gensui/frontend/src/i18n/: da.json  de.json  en.json  es.json  fr.json  index.ts  it.json  ja.json  ko.json  no.json  pl.json  pt.json  sv.json  uk.json  zh.json
gensui/frontend/src/lib/: api.ts  auth.ts
gensui/frontend/src/pages/: ActivityMonitor.tsx  Alerts.tsx  AuditLog.tsx  Dashboard.tsx  Enrollment.tsx  Fleet.tsx  FleetAudit.tsx  Groups.tsx  Guide.tsx  HarakiriControl.tsx  Identity.tsx  Login.tsx  NetworkTopology.tsx  Postures.tsx  Settings.tsx  ShogunDetail.tsx
gensui/scripts/: seed_demo_agents.py
gensui/services/: __init__.py  alert_service.py  audit_service.py  auth_service.py  command_service.py  fleet_audit_service.py  group_service.py  harakiri_service.py  identity_service.py  member_service.py  network_scanner.py  posture_service.py  seed.py  telemetry_service.py
installer/: install.mjs  package-lock.json  package.json
scripts/: create_shortcut_win.bat  open_shogun_when_ready.ps1
shogun/: __init__.py  __main__.py  app.py  bootstrap.py  config.py  scheduler.py
tests/: test_agent_flow_templates.py  test_agents.py  test_chat_sync.py  test_email_folders.py  test_flow_fallback.py  test_heartbeat.py  test_mado_posture.py  test_memory_reinforcement.py  test_nexus_gateway.py  test_openclaw_mcp.py  test_scheduler_cadence.py  test_smoke.py  test_teams_adapter.py  test_telegram_routing.py  test_tool_gate.py  test_update_checker.py  test_word_adapter.py
(+217 files in other folders)
