[project]
name = "shogun"
version = "1.6.1"
description = "Shogun — A GUI-first AI agent framework with structured memory, governed autonomy, and OpenClaw compatibility"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Michael", email = "michael@example.com" },
]

dependencies = [
    # --- Web Framework & API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # --- Database (SQLite default, PostgreSQL optional) ---
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",

    # --- Vector Memory ---
    "qdrant-client>=1.12.0",

    # --- UI ---
    "reflex>=0.6.0",

    # --- Security & Secrets ---
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",

    # --- Scheduling ---
    "apscheduler>=3.10.0",

    # --- HTTP Client ---
    "httpx>=0.27.0",

    # --- Browser Automation (Mado) ---
    "playwright>=1.44.0",

    # --- Utilities ---
    "python-multipart>=0.0.12",
    "orjson>=3.10.0",
    "psutil>=5.9.0",
    "sentence-transformers>=3.1.0",
    "torch>=2.4.0",
    "caldav>=1.4.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
]
ronin = [
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "opencv-python-headless>=4.9.0",
]
office = [
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pywin32>=306;sys_platform=='win32'",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
shogun = "shogun.__main__:main"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shogun*"]

[tool.setuptools.package-data]
shogun = [
    "resources/*.json",
    "ui/static/**/*",
    "ui/static/images/*",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
