[project]
name = "gensui"
version = "0.1.0"
description = "Gensui — Central Command & Security Control Plane for Shogun"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "AlphaHorizon AI" },
]

dependencies = [
    # --- Web Framework & API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",

    # --- Security ---
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",

    # --- HTTP Client ---
    "httpx>=0.27.0",

    # --- Utilities ---
    "orjson>=3.10.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.scripts]
gensui = "gensui.__main__:main"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gensui*"]

[tool.ruff]
target-version = "py310"
line-length = 120
